Update test project and get rid of NUnit

--- a/LinQToSqlBuilder.DataAccessLayer.Tests/LinQToSqlBuilder.DataAccessLayer.Tests.csproj
+++ b/LinQToSqlBuilder.DataAccessLayer.Tests/LinQToSqlBuilder.DataAccessLayer.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,11 +10,12 @@
 		<PackageReference Include="MSTest.TestAdapter" Version="3.6.1" />
 		<PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NUnit" Version="4.2.2" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.6.0">
+		<PackageReference Include="FluentAssertions" Version="6.12.1" />
+		<PackageReference Include="xunit" Version="2.9.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
