--- a/LinQToSqlBuilder.DataAccessLayer.Tests/LinQToSqlBuilder.DataAccessLayer.Tests.csproj
+++ b/LinQToSqlBuilder.DataAccessLayer.Tests/LinQToSqlBuilder.DataAccessLayer.Tests.csproj
@@ -13,7 +13,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="FluentAssertions" Version="6.12.2" />
+		<PackageReference Include="Shouldly" Version="4.2.1" />
 		<PackageReference Include="xunit" Version="2.9.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
 			<PrivateAssets>all</PrivateAssets>
