--- a/LinQToSqlBuilder/LinQToSqlBuilder.csproj
+++ b/LinQToSqlBuilder/LinQToSqlBuilder.csproj
@@ -7,5 +7,8 @@
 		<AssemblyName>LinQToSqlBuilder</AssemblyName>
 		<RootNamespace>DotNetBrightener.LinQToSqlBuilder</RootNamespace>
 	</PropertyGroup>
+	<PropertyGroup>
+		<IsPackable>true</IsPackable>
+	</PropertyGroup>
 
 </Project>
