Add integration tests for Npgsql

--- a/LinQToSqlBuilder.Mssql.Tests/LinQToSqlBuilder.Mssql.Tests.csproj
+++ b/LinQToSqlBuilder.Mssql.Tests/LinQToSqlBuilder.Mssql.Tests.csproj
@@ -31,4 +31,8 @@
 		<ProjectReference Include="..\LinQToSqlBuilder.Mssql\LinQToSqlBuilder.Mssql.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
