--- a/LinQToSqlBuilder.Npgsql.Tests/LinQToSqlBuilder.Npgsql.Tests.csproj
+++ b/LinQToSqlBuilder.Npgsql.Tests/LinQToSqlBuilder.Npgsql.Tests.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Bogus" />
 		<PackageReference Include="Dapper" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest.TestAdapter" />
@@ -15,7 +16,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Npgsql" />
 		<PackageReference Include="Shouldly" />
+		<PackageReference Include="Testcontainers.PostgreSql" />
 		<PackageReference Include="xunit" />
 		<PackageReference Include="xunit.runner.visualstudio">
 			<PrivateAssets>all</PrivateAssets>
@@ -25,6 +28,11 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\LinQToSqlBuilder.Npgsql\LinQToSqlBuilder.Npgsql.csproj" />
+		<ProjectReference Include="..\..\TestHelpers\DotNetBrightener.TestHelpers.PostgreSql\DotNetBrightener.TestHelpers.PostgreSql.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
